2005-12-05  Anand Babu  <ab@zresearch.com>

	* fish/extensions/sel.scm: Anand Avati's <avati@zresearch.com>
	patch for bug [#14926 fish assumes user has a home directory].

	* libfreeipmi/src/freeipmi.h: More tests for sys/io.h header
	inclusing. Closing bug [#11209 overview: Uses ys/io.h].

2005-12-05  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/fiid.h, libfreeipmi/src/fiid.c
	(fiid_obj_get_data): Add len parameter for data buffer.

	* fish/src, libfreeipmi/src: Various changes to support change in
	fiid_obj_get_data, in particular passing lengths of buffers to
	various functions.
	
2005-12-02  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-lan-interface.c (unassemble_ipmi_lan_pkt),
	libfreeipmi/src/ipmi-debug.c (fiid_obj_dump_lan): Fill in lan
	trailer even when packet is shorter than expected.
	
2005-12-01  Albert Chu  <chu11@llnl.gov>

	* fish/bmc-config.conf.5.in: Fixed typos.
	
2005-11-21  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-lan-interface.h
	(IPMI_LAN_PKT_RQ_CHKSUM2_BLOCK_LEN,
	IPMI_LAN_PKT_RS_CHKSUM2_BLOCK_LEN): Fixed bug in macros that
	incorrectly calculated chksum data lengths.  Bugs never occurred
	in libfreeipmi b/c buffers were memset and the chksums were adding
	pointless 0's.
	
2005-11-17  Albert Chu  <chu11@llnl.gov>
	
        Merge in rmcpping/ipmiping changes from branch al_ipmi_2_0_branch
	that aren't IPMI 2.0 related.

	* ipmiping/src/ipmiping.c, rmcpping/src/rmcpping.c,
	libfreeipmi/src/ipmi-ping.h, libfreeipmi/src/ipmi-ping.c: Various
	changes to support new -s option and randomized starting sequence
	numbers.

	* configure.ac: Add checks of /dev/urandom and /dev/random.

	* ipmiping/ipmiping.8.in, rmcpping/rmcpping.8.in: Document new
	options and info.
	
2005-11-17  Albert Chu  <chu11@llnl.gov>

	* ipmipower/src/ipmipower.c (main): Fix compiler warning.

2005-11-17  Anand Babu  <ab@zresearch.com>

	* fish/extensions/sel.scm: Anand Avati's <avati@zresearch.com>
	patch for --delete-event-id option. Closing 
	